--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 <nav class="navbar   header-main">
                     <a class="navbar-brand" href="#">
                         <img src="./images/Capture.PNG" width="55" height="60" class="d-inline-block align-top" alt="">
-                        <span class="logo-span">Prince Furniture </span>
+                        <a href="./index.html"><span class="logo-span">Prince Furniture </span></a>
                     </a>
                     <form class="form-inline">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -106,39 +106,45 @@
             <h1 class="contact-head">ITS SELF</h1>
             <h3 class="contact-heading animate__animated animate__zoomIn">Contact</h3>
         </div>
-        <div class="contact-cont">
+        <div class="contact-main">
+            <div class="contact-cont">
 
-            <form>
-                <h3 class="form-heading">First Name </h3>
+                <form>
+                    <h3 class="form-heading">First Name </h3>
                     <input type="text" id="firstname" class="ïnput_data" name="firstname"
                         placeholder="Enter your firstname" required>
-                
-                <br />
+
+                    <br />
                     <h3 class="form-heading">Last Name </h3>
                     <input type="text" id="lastname" class="ïnput_data" name="lastname"
                         placeholder="Enter your lastname" required>
-                <br />
-                    <h3 class="form-heading">Email <Address></Address> </h3>
+                    <br />
+                    <h3 class="form-heading">Email <Address></Address>
+                    </h3>
                     <input type="email" id="email" class="input_data" name="email" placeholder="Enter your Email"
                         maxlength="8" required>
-                <br />
+                    <br />
                     <h3 class="form-heading">Message </h3>
                     <textarea id="subject" name="subject" placeholder="Write something.."
                         style="height:200px"></textarea>
-               
-                <br />
 
-                <button class="content-btn">Submit</button>
-            </form>
+                    <br />
+
+                    <button class="content-btn" id="contact-btn">Submit</button>
+                </form>
 
 
+            </div>
+            <!-- Form section End-->
+            <!-- MAp Section -->
+            <div class=" map-section">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14480.255238103187!2d67.03716229999999!3d24.86167015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1655030422966!5m2!1sen!2s"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <!-- MAp Section  End-->
         </div>
-        <!-- Form section End-->
-<!-- MAp Section -->
-<div class="container bedroom-container">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14480.255238103187!2d67.03716229999999!3d24.86167015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1655030422966!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-<!-- MAp Section  End-->
         <!-- Footer Section -->
         <section>
             <section class="px-5 backg">
@@ -148,7 +154,8 @@
                         <h3 class="">Prince Furniture</h3>
                         <div class="d-flex direction-coloum">
                             <ul class="lists">
-                                <p class="footer-para">We make interiors infused with the spirit of <br />contemporary design and minimalist
+                                <p class="footer-para">We make interiors infused with the spirit of <br />contemporary
+                                    design and minimalist
                                     philosophies.</p>
                             </ul>
                         </div>
