--- a/table&dinning.html
+++ b/table&dinning.html
@@ -33,7 +33,8 @@
                 <nav class="navbar   header-main">
                     <a class="navbar-brand" href="#">
                         <img src="./images/Capture.PNG" width="55" height="60" class="d-inline-block align-top" alt="">
-                        <span class="logo-span">Prince Furniture </span>
+                        <!-- <span class="logo-span">Prince Furniture </span> -->
+                        <a href="./index.html"><span class="logo-span">Prince Furniture </span></a>
                     </a>
                     <form class="form-inline">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
