--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <nav class="navbar header-main">
                     <a class="navbar-brand" href="#">
                         <img src="./images/Capture.PNG" width="55" height="60" class="d-inline-block align-top" alt="">
-                        <span class="logo-span">Prince Furniture </span>
+                       <a href="./index.html"><span class="logo-span">Prince Furniture </span></a>
 
                     </a>
                     <form class="form-inline">
